# piilot-pack-sap

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  init-plugin.sh  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  release-ui.yml  release.yml
frontend/: README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
frontend/__tests__/: AuditLogPanel.test.tsx  ConnectionPanel.test.tsx  EntityBrowser.test.tsx  StatusPanel.test.tsx  index.test.ts  sapClient.test.ts  setup.tsx
frontend/__tests__/stubs/plugin-host/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  label.tsx  select.tsx  table.tsx  tabs.tsx
frontend/__tests__/stubs/plugin-host/lib/: pluginUI.ts
frontend/__tests__/stubs/plugin-host/services/: httpClient.ts
frontend/src/: HelloModuleView.tsx  SAPConnectorView.tsx  index.ts
frontend/src/components/: AuditLogPanel.tsx  ConnectionPanel.tsx  EntityBrowser.tsx  StatusPanel.tsx
frontend/src/locales/: en.json  fr.json
frontend/src/services/: sapClient.ts
piilot_pack_hello/: __init__.py  connector.py  handlers.py  jobs.py  repo.py  routes.py  seeds.py  tools.py
piilot_pack_hello/locales/: en.json  fr.json
piilot_pack_hello/migrations/: 001_init.sql  002_hello_counter.sql
piilot_pack_sap/: __init__.py  audit.py  auth.py  connection_resolver.py  connector.py  cost_guard.py  handlers.py  introspect.py  kb_seeder.py  odata_client.py  odata_validator.py  query_builder.py  rate_limit.py  repository.py  routes.py  seeds.py  snapshot_service.py  tool_executor.py  tools.py
piilot_pack_sap/locales/: en.json  fr.json
piilot_pack_sap/migrations/: 001_init_sap.sql
scripts/: dry_run_install.sh  post-init-check.sh
tests/: conftest.py  test_audit.py  test_auth.py  test_auth_oauth.py  test_connection_resolver.py  test_cost_guard.py  test_introspect.py  test_kb_seeder.py  test_odata_client.py  test_odata_validator.py  test_plugin_boot.py  test_query_builder.py  test_rate_limit.py  test_repository.py  test_routes.py  test_snapshot_service.py  test_tool_executor.py  test_tools.py
tests/integration/: conftest.py  test_live_sandbox.py
