[project]
name = "piilot-pack-sap"
version = "0.1.0"
description = "SAP S/4HANA Cloud OData connector — read-only agent access to FI/CO/MM/SD entities for financial and operational analytics"
license = "apache-2.0"
authors = [
    { name = "Kinetics Consulting V2", email = "contact@piilot.ai" },
]
readme = "README.md"
requires-python = ">=3.12"
urls.homepage = "https://github.com/Kinetics-Consulting-V2/piilot-pack-sap"

dependencies = [
    "piilot-sdk>=0.7.0,<1.0.0",
    "fastapi>=0.115",
    "langchain-core>=0.3",
    "httpx>=0.27.0,<1.0.0",
    "defusedxml>=0.7.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "respx>=0.21",
    "python-dotenv>=1.0",
    "ruff>=0.9",
    "black>=25.0",
]

[project.entry-points."piilot.plugins"]
sap = "piilot_pack_sap:Plugin"

# -----------------------------------------------------------------------------
# Piilot plugin manifest
# -----------------------------------------------------------------------------
[tool.piilot.plugin]
manifest_version = 1
namespace = "sap"
sdk_compat = ">=0.7.0,<1.0.0"
category = "integration"
supported_modes = ["saas", "selfhosted"]
supported_locales = ["fr", "en"]
default_access = "restricted"

# --- Modules ---
# Single module Piilot — pattern aligned with piilot-pack-pennylane and
# piilot-pack-supabase. Carries the whole plugin UX (connection config,
# status, entity browser, audit log).
[[tool.piilot.plugin.provides.modules]]
id = "sap.connector"
label_key = "sap.modules.connector.title"
icon = "plug"

# --- Connectors ---
# SAP S/4HANA Cloud OData endpoint with Basic auth or OAuth 2.0
# client_credentials (decision tour-1 dans suivi.md). X.509 reporté à v1.1.
[[tool.piilot.plugin.provides.connectors]]
id = "sap.s4hana_cloud"
label_key = "sap.connectors.s4hana_cloud.label"
auth_type = "custom"
# Credentials schema covers both auth modes — the connector_service
# picks the right code path based on which fields are populated.

[[tool.piilot.plugin.provides.connectors.credentials_schema]]
name = "auth_mode"
type = "string"
required = true
default = "basic"
# Values accepted at runtime: "basic" | "oauth_client_credentials"
label_key = "sap.connectors.s4hana_cloud.auth_mode.label"

[[tool.piilot.plugin.provides.connectors.credentials_schema]]
name = "base_url"
type = "string"
required = true
# E.g. https://my123456.s4hana.cloud.sap (no trailing slash)
label_key = "sap.connectors.s4hana_cloud.base_url.label"

[[tool.piilot.plugin.provides.connectors.credentials_schema]]
name = "basic_username"
type = "string"
required = false
label_key = "sap.connectors.s4hana_cloud.basic_username.label"

[[tool.piilot.plugin.provides.connectors.credentials_schema]]
name = "basic_password"
type = "secret"
required = false
label_key = "sap.connectors.s4hana_cloud.basic_password.label"

[[tool.piilot.plugin.provides.connectors.credentials_schema]]
name = "oauth_token_url"
type = "string"
required = false
label_key = "sap.connectors.s4hana_cloud.oauth_token_url.label"

[[tool.piilot.plugin.provides.connectors.credentials_schema]]
name = "oauth_client_id"
type = "string"
required = false
label_key = "sap.connectors.s4hana_cloud.oauth_client_id.label"

[[tool.piilot.plugin.provides.connectors.credentials_schema]]
name = "oauth_client_secret"
type = "secret"
required = false
label_key = "sap.connectors.s4hana_cloud.oauth_client_secret.label"

[[tool.piilot.plugin.provides.connectors.credentials_schema]]
name = "oauth_scope"
type = "string"
required = false
label_key = "sap.connectors.s4hana_cloud.oauth_scope.label"

# --- Agent tools ---
# 9 OData tools — registered programmatically in tools.py (Phase 2).
# Declared here for audit / discovery purposes only. The runtime
# registry is populated by the register_tool() calls.
# Phase 2 will populate this section.

# --- Permissions (audit declaration) ---
[tool.piilot.plugin.permissions]
reads = [
    "public.companies",
    "integrations_sap.connections",
    "integrations_sap.schema_snapshot",
    "integrations_sap.audit_log",
    "public.knowledge_bases",
]
writes = [
    "integrations_sap.connections",
    "integrations_sap.schema_snapshot",
    "integrations_sap.audit_log",
]
external_apis = [
    "*.s4hana.cloud.sap",
    "sandbox.api.sap.com",
]

# -----------------------------------------------------------------------------
# Build backend
# -----------------------------------------------------------------------------

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["piilot_pack_sap*"]

[tool.setuptools.package-data]
"piilot_pack_sap" = [
    "locales/*.json",
    "migrations/*.sql",
    "pyproject.toml",
]

# -----------------------------------------------------------------------------
# Lint / format / test
# -----------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: live HTTP tests against SAP API Hub sandbox (requires SAP_API_HUB_KEY)",
]
